--- a/server/modules/monitor/csmon/test/CMakeLists.txt
+++ b/server/modules/monitor/csmon/test/CMakeLists.txt
@@ -13,3 +13,4 @@ target_link_libraries(test_csxml csmon ${LIBXML2_LIBRARIES})
 target_link_libraries(cssystemtest maxbase ${JANSSON_LIBRARIES} ${LIBXML2_LIBRARIES})
 
 add_test(test_csxml test_csxml)
+add_test(cssystemtest cssystemtest)
